--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -18,7 +18,8 @@
                 d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
                 style="fill:#f3f3f3" />
         </svg>
-        <div id="raon-box"><a href="main.html"><img width="133.7666" height="33.8293" src="images/raon-white.svg"></a></div>
+        <div id="raon-box"><a href="main.html"><img width="133.7666" height="33.8293" src="images/raon-white.svg"></a>
+        </div>
         <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
         <div id="left-menu">
             <a href="" class="secret-menu">Logbook</a>
@@ -369,7 +370,7 @@
         <!-- Left -->
         <div class="body-left" style="width:660px; height:780px;">
             <div class="body-left-grid">
-                <div class="grid-item"
+                <div class="grid-item fade-animation"
                     style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                     <svg width="622" height="162" style="position: absolute; top:-1px; left:-1px;">
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
@@ -422,7 +423,7 @@
 
                 </div>
 
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width: 100%; height: 100%;">
                         <div class="liquid-box"><span id="n2-value">45</span>
                             <div class="subBox" style="--b:rgba(0,180,170,1.0)"></div>
@@ -441,7 +442,7 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">Pressure</div>
                         <div class="data-value" style="position: relative; left: 25px; top:40px;">
@@ -450,7 +451,7 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">Temperature</div>
                         <div class="data-value" id="temperature1" style="position: relative; left: 25px; top:40px">0.0
@@ -477,7 +478,7 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">Temperature</div>
                         <div class="data-value" id="temperature2" style="position: relative; left: 25px; top:40px">0.0
@@ -503,7 +504,8 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
+                <div class="grid-item fade-animation"
+                    style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
                     <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px;">
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
@@ -550,7 +552,7 @@
         <!-- Right -->
         <div class="body-right" style="width:660px; height:780px;">
             <div class="body-right-grid">
-                <div class="grid-item"
+                <div class="grid-item fade-animation"
                     style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                     <svg width="622" height="162" style="position: absolute; top:-1px; left:-1px;">
                         <defs>
@@ -597,7 +599,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">Power</div>
                         <div class="data-value" id="power-value" style="position: relative; left: 25px; top:40px">0
@@ -630,14 +632,14 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="width:300px; height:160px;">
                     <div class="data-name" style="position: relative; left: 25px; top:25px">Vacuum</div>
                     <div class="data-value" style="position: relative; left: 25px; top:40px;">
                         <span id="vacuum-value">1.9</span><sup id="vacuum-exp" class="exp-value">-9</sup>
                     </div>
                 </div>
 
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">2K Level</div>
                         <div class="data-value" id="level-2k" style="position: relative; left: 25px; top:40px">0</div>
@@ -664,7 +666,7 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                <div class="grid-item fade-animation" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">4K Level</div>
                         <div class="data-value" id="level-4k" style="position: relative; left: 25px; top:40px">0</div>
@@ -691,7 +693,8 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
+                <div class="grid-item fade-animation"
+                    style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
                     <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px;">
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
@@ -2260,6 +2263,18 @@
         // var ctx3 = document.getElementById('canvas3').getContext('2d');
         // // var lineConfig2 = lineChartConfig(datails2)
         // window.myChart = new Chart(ctx3, lineChartConfig(details[2]));
+
+        var gridItemClass = document.getElementsByClassName("fade-animation");
+
+        // var delayTime = 0;
+        for (let x of gridItemClass) {
+            let delayTime = Math.random() * 0.3;
+            x.style.animationDelay = delayTime + "s";
+
+            // delayTime += 0.1;
+        }
+
+
     }
 
     function firstShowUp() {
