--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -8,8 +8,8 @@
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
         <div id="time-stamp"></div>
         <svg id="under-line" width="1920" height="42">
-            <polyline class="under-bar-style" points="0 40 760 40 791 0" />
-            <polyline class="under-bar-style" points="1920 40 1160 40 1129 0" />
+            <polyline class="under-line-style" points="0 40 760 40 791 0" />
+            <polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
         </svg>
         <svg id="center-top" width="400" height="80">
             <path
@@ -44,10 +44,10 @@
             <div class="title-box">Schedule</div>
 
             <div style="display: flex; position:relative; left: 25px; margin-top:10px">
-                <button id="last-button" onclick="lastCalendar()">&#10094;</button>
+                <button id="last-button" onclick="lastCalendar(-1)">&#10094;</button>
 
                 <div id="year">January 2021</div>
-                <button id="next-button" onclick="nextCalendar()">&#10095;</button>
+                <button id="next-button" onclick="nextCalendar(1)">&#10095;</button>
             </div>
 
             <div style="display: flex;">
@@ -581,7 +581,7 @@
         }
     ];
 
-    function thisCalendar() {
+    function createCalendar(offset) {
         // Remove this month schedule buttons
         var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
         for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
@@ -605,7 +605,10 @@
         }
 
         // Create last month
-        today = new Date(today.getFullYear(), today.getMonth());
+        today = new Date(today.getFullYear(), today.getMonth() +  offset);
+        // today = new Date(today.getFullYear(), today.getMonth() - 1); // last
+        // today = new Date(today.getFullYear(), today.getMonth() + 1); // next
+
         makeCalendar();
 
         // Create schedule and shift list
@@ -629,105 +632,153 @@
         }
     }
 
-    function lastCalendar() {
+    // function thisCalendar() {
+    //     // Remove this month schedule buttons
+    //     var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+    //     for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
+    //         scheduleButtonClass[i].remove();
+    //     }
 
-        // Remove this month schedule buttons
-        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
-        for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
-            scheduleButtonClass[i].remove();
-        }
+    //     // Clear this month schedule list
+    //     var bodyCenterId = document.getElementById('body-center');
+    //     bodyCenterId.innerHTML = '';
 
-        // Clear this month schedule list
-        var bodyCenterId = document.getElementById('body-center');
-        bodyCenterId.innerHTML = '';
+    //     // Clear shift list
+    //     var shiftAvatar = document.getElementsByClassName("avatar-img");
+    //     var shiftUserTable = document.getElementsByClassName("shift-user");
+    //     var shiftTeamTable = document.getElementsByClassName("team-name");
+    //     var shiftDesk = document.getElementsByClassName("desk-img");
+    //     for (let i = 0; i < 20; i++) {
+    //         shiftAvatar[i].src = '';
+    //         shiftUserTable[i].innerText = '';
+    //         shiftTeamTable[i].innerText = '';
+    //         shiftDesk[i].innerHTML = '';
+    //     }
 
-        // Clear shift list
-        var shiftAvatar = document.getElementsByClassName("avatar-img");
-        var shiftUserTable = document.getElementsByClassName("shift-user");
-        var shiftTeamTable = document.getElementsByClassName("team-name");
-        var shiftDesk = document.getElementsByClassName("desk-img");
-        for (let i = 0; i < 20; i++) {
-            shiftAvatar[i].src = '';
-            shiftUserTable[i].innerText = '';
-            shiftTeamTable[i].innerText = '';
-            shiftDesk[i].innerHTML = '';
-        }
+    //     // Create last month
+    //     today = new Date(today.getFullYear(), today.getMonth());
+    //     makeCalendar();
 
-        // Create last month
-        today = new Date(today.getFullYear(), today.getMonth() - 1);
-        makeCalendar();
+    //     // Create schedule and shift list
+    //     //  getScheduleDatabase();
+    //     makeSchedule();
 
-        // Create schedule and shift list
-        getScheduleDatabase();
-        //makeSchedule();
+    //     // Show up first shift list
+    //     var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+    //     if (scheduleButtonClass[0]) {
+    //         scheduleButtonClass[0].click();
+    //     }
+    //     else {
+    //         // Title under line animation re-trigger
+    //         var titleBarClass = document.getElementsByClassName('title-bar');
 
-        // Show up first shift list
-        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
-        if (scheduleButtonClass[0]) {
-            scheduleButtonClass[0].click();
-        }
-        else {
-            // Title under line animation re-trigger
-            var titleBarClass = document.getElementsByClassName('title-bar');
+    //         // 0: Todo under line, 1: Shift under line
+    //         titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
+    //         titleBarClass[1].classList.remove('under-bar');
+    //         titleBarClass[1].offsetWidth;
+    //         titleBarClass[1].classList.add('under-bar');
+    //     }
+    // }
 
-            // 0: Todo under line, 1: Shift under line
-            titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
-            titleBarClass[1].classList.remove('under-bar');
-            titleBarClass[1].offsetWidth;
-            titleBarClass[1].classList.add('under-bar');
-        }
-    }
+    // function lastCalendar() {
 
-    function nextCalendar() {
+    //     // Remove this month schedule buttons
+    //     var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+    //     for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
+    //         scheduleButtonClass[i].remove();
+    //     }
 
-        //getScheduleDatabase();
+    //     // Clear this month schedule list
+    //     var bodyCenterId = document.getElementById('body-center');
+    //     bodyCenterId.innerHTML = '';
 
-        // Remove this month schedule buttons
-        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
-        for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
-            scheduleButtonClass[i].remove();
-        }
+    //     // Clear shift list
+    //     var shiftAvatar = document.getElementsByClassName("avatar-img");
+    //     var shiftUserTable = document.getElementsByClassName("shift-user");
+    //     var shiftTeamTable = document.getElementsByClassName("team-name");
+    //     var shiftDesk = document.getElementsByClassName("desk-img");
+    //     for (let i = 0; i < 20; i++) {
+    //         shiftAvatar[i].src = '';
+    //         shiftUserTable[i].innerText = '';
+    //         shiftTeamTable[i].innerText = '';
+    //         shiftDesk[i].innerHTML = '';
+    //     }
 
-        // Clear this month schedule list
-        var bodyCenterId = document.getElementById('body-center');
-        bodyCenterId.innerHTML = '';
+    //     // Create last month
+    //     today = new Date(today.getFullYear(), today.getMonth() - 1);
+    //     makeCalendar();
 
-        // Clear shift list
-        var shiftAvatar = document.getElementsByClassName("avatar-img");
-        var shiftUserTable = document.getElementsByClassName("shift-user");
-        var shiftTeamTable = document.getElementsByClassName("team-name");
-        var shiftDesk = document.getElementsByClassName("desk-img");
-        for (let i = 0; i < 20; i++) {
-            shiftAvatar[i].src = '';
-            shiftUserTable[i].innerText = '';
-            shiftTeamTable[i].innerText = '';
-            shiftDesk[i].innerHTML = '';
-        }
+    //     // Create schedule and shift list
+    //     // getScheduleDatabase();
+    //     makeSchedule();
 
-        // Create next month
-        today = new Date(today.getFullYear(), today.getMonth() + 1);
-        makeCalendar();
+    //     // Show up first shift list
+    //     var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+    //     if (scheduleButtonClass[0]) {
+    //         scheduleButtonClass[0].click();
+    //     }
+    //     else {
+    //         // Title under line animation re-trigger
+    //         var titleBarClass = document.getElementsByClassName('title-bar');
 
-        // Create schedule and shift list
-        getScheduleDatabase();
-        // makeSchedule();
+    //         // 0: Todo under line, 1: Shift under line
+    //         titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
+    //         titleBarClass[1].classList.remove('under-bar');
+    //         titleBarClass[1].offsetWidth;
+    //         titleBarClass[1].classList.add('under-bar');
+    //     }
+    // }
 
-        // Show up first shift list
-        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
-        if (scheduleButtonClass[0]) {
-            scheduleButtonClass[0].click();
-        }
-        else {
-            // Title under line animation re-trigger
-            var titleBarClass = document.getElementsByClassName('title-bar');
+    // function nextCalendar() {
 
-            // 0: Todo under line, 1: Shift under line
-            titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
-            titleBarClass[1].classList.remove('under-bar');
-            titleBarClass[1].offsetWidth;
-            titleBarClass[1].classList.add('under-bar');
-        }
-    }
+    //     //getScheduleDatabase();
+
+    //     // Remove this month schedule buttons
+    //     var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+    //     for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
+    //         scheduleButtonClass[i].remove();
+    //     }
+
+    //     // Clear this month schedule list
+    //     var bodyCenterId = document.getElementById('body-center');
+    //     bodyCenterId.innerHTML = '';
+
+    //     // Clear shift list
+    //     var shiftAvatar = document.getElementsByClassName("avatar-img");
+    //     var shiftUserTable = document.getElementsByClassName("shift-user");
+    //     var shiftTeamTable = document.getElementsByClassName("team-name");
+    //     var shiftDesk = document.getElementsByClassName("desk-img");
+    //     for (let i = 0; i < 20; i++) {
+    //         shiftAvatar[i].src = '';
+    //         shiftUserTable[i].innerText = '';
+    //         shiftTeamTable[i].innerText = '';
+    //         shiftDesk[i].innerHTML = '';
+    //     }
+
+    //     // Create next month
+    //     today = new Date(today.getFullYear(), today.getMonth() + 1);
+    //     makeCalendar();
+
+    //     // Create schedule and shift list
+    //     // getScheduleDatabase();
+    //     makeSchedule();
+
+    //     // Show up first shift list
+    //     var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+    //     if (scheduleButtonClass[0]) {
+    //         scheduleButtonClass[0].click();
+    //     }
+    //     else {
+    //         // Title under line animation re-trigger
+    //         var titleBarClass = document.getElementsByClassName('title-bar');
+
+    //         // 0: Todo under line, 1: Shift under line
+    //         titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
+    //         titleBarClass[1].classList.remove('under-bar');
+    //         titleBarClass[1].offsetWidth;
+    //         titleBarClass[1].classList.add('under-bar');
+    //     }
+    // }
 
     function makeCalendar() {
         // Year and Month
@@ -1080,7 +1131,10 @@
     window.onload = function () {
         var myVar = setInterval(timer, 1000);
 
-        thisCalendar()
+        // 0: this month, -1: last month, 1: next month
+        createCalendar(0);
+
+        // thisCalendar()
         // makeSchedule();
         // scheduleDetail();
         // shifterList(0, '#8E44AD');
