timeleap code cleanup

--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -414,11 +414,11 @@
 <script>
     // Control Server
     // var serverAddr = 'http://192.168.68.14'
-	// var scheduleAddr = serverAddr + ':9011/schedule/'
+    // var scheduleAddr = serverAddr + ':9011/schedule/'
 
     // scwook Server
     var serverAddr = 'http://localhost'
-	var scheduleAddr = serverAddr + ':8081/schedule/'
+    var scheduleAddr = serverAddr + ':8081/schedule/'
 
     var today = new Date();
     var date = new Date();
@@ -468,7 +468,9 @@
                 { name: "Park, Heecheol", team: "Cryogenic", desk: 3, seat: 6, leader: 0 },
                 { name: "Yoo, JungHyun", team: "Cryogenic", desk: 4, seat: 1, leader: 0 },
                 { name: "Park, Heecheol", team: "Cryogenic", desk: 4, seat: 2, leader: 0 },
-                { name: "Yoo, JungHyun", team: "Cryogenic", desk: 4, seat: 2, leader: 1 }
+                { name: "Yoo, JungHyun", team: "Cryogenic", desk: 4, seat: 3, leader: 0 },
+                { name: "Park, Heecheol", team: "Cryogenic", desk: 4, seat: 4, leader: 0 },
+                { name: "Yoo, JungHyun", team: "Cryogenic", desk: 4, seat: 5, leader: 0 }
             ]
         },
 
@@ -503,8 +505,8 @@
             ]
         },
         {
-            fromDate: "2021-10-20",
-            toDate: "2021-10-22",
+            fromDate: "2021-10-27",
+            toDate: "2021-10-29",
             title: "Beam Commissioning 2",
             detail: [
                 'Cool down',
@@ -605,7 +607,7 @@
         }
 
         // Create last month
-        today = new Date(today.getFullYear(), today.getMonth() +  offset);
+        today = new Date(today.getFullYear(), today.getMonth() + offset);
         // today = new Date(today.getFullYear(), today.getMonth() - 1); // last
         // today = new Date(today.getFullYear(), today.getMonth() + 1); // next
 
@@ -971,10 +973,14 @@
     }
 
     var desk1SVG = '<svg width="40" height="8"><path class="desk1" d="M6.67,6.4A10.51,10.51,0,0,1,12.07,8h1.26V0H0V8H1.26A10.51,10.51,0,0,1,6.67,6.4" style="fill:#e6e6e5"/><path class="desk1" d="M20,6.4A10.54,10.54,0,0,1,25.41,8h1.26V0H13.33V8h1.26A10.54,10.54,0,0,1,20,6.4" style="fill:#e6e6e5"/><path class="desk1" d="M33.33,6.4A10.51,10.51,0,0,1,38.74,8H40V0H26.67V8h1.26a10.51,10.51,0,0,1,5.4-1.6" style="fill:#e6e6e5"/></svg>'
-    var desk2SVG = '<svg width="19.97" height="21"><path class="desk2" d="M9.13,16.38,7.63,21,2.11,17,6,14.13A6.25,6.25,0,0,0,9.13,16.38Z" style="fill:#e6e6e5"/><path class="desk2" d="M4.86,10.5A6.15,6.15,0,0,0,6,14.13L2.11,17,0,10.5Z" style="fill:#e6e6e5"/><path class="desk2" d="M4.86,10.5H0L2.11,4,6,6.87A6.15,6.15,0,0,0,4.86,10.5Z" style="fill:#e6e6e5"/><path class="desk2" d="M6,6.87,2.11,4,7.63,0l1.5,4.62A6.25,6.25,0,0,0,6,6.87Z" style="fill:#e6e6e5"/><path class="desk2" d="M11,4.32a6.31,6.31,0,0,0-1.91.3L7.63,0h6.82L13,4.62A6.31,6.31,0,0,0,11,4.32Z" style="fill:#e6e6e5"/><path class="desk2" d="M13,4.62,14.45,0,20,4,16,6.87A6.25,6.25,0,0,0,13,4.62Z" style="fill:#e6e6e5"/></svg>'
-    var desk3SVG = '<svg width="19.97" height="21"><path class="desk3" d="M10.84,16.38,12.34,21l5.52-4-3.93-2.86A6.21,6.21,0,0,1,10.84,16.38Z" style="fill:#e6e6e5"/><path class="desk3" d="M15.11,10.5a6.15,6.15,0,0,1-1.18,3.63L17.86,17,20,10.5Z" style="fill:#e6e6e5"/><path class="desk3" d="M15.11,10.5H20L17.86,4,13.93,6.87A6.15,6.15,0,0,1,15.11,10.5Z" style="fill:#e6e6e5"/><path class="desk3" d="M13.93,6.87,17.86,4,12.34,0l-1.5,4.62A6.21,6.21,0,0,1,13.93,6.87Z" style="fill:#e6e6e5"/><path class="desk3" d="M8.93,4.32a6.31,6.31,0,0,1,1.91.3L12.34,0H5.52L7,4.62A6.31,6.31,0,0,1,8.93,4.32Z" style="fill:#e6e6e5"/><path class="desk3" d="M7,4.62,5.52,0,0,4,3.94,6.87A6.18,6.18,0,0,1,7,4.62Z" style="fill:#e6e6e5"/></svg>'
-    var desk4SVG = '<svg width="25" height="12"><path class="desk4" d="M6.84,7.85,2.39,4.58,0,12H5.5A7.09,7.09,0,0,1,6.84,7.85Z" style="fill:#e6e6e5"/><path class="desk4" d="M10.34,5.28,8.64,0,2.39,4.58,6.84,7.85A7.06,7.06,0,0,1,10.34,5.28Z" style="fill:#e6e6e5"/><path class="desk4" d="M12.5,4.93a7,7,0,0,1,2.16.35L16.36,0H8.64l1.7,5.28A7,7,0,0,1,12.5,4.93Z" style="fill:#e6e6e5"/><path class="desk4" d="M18.16,7.85l4.45-3.27L16.36,0l-1.7,5.28A7.06,7.06,0,0,1,18.16,7.85Z" style="fill:#e6e6e5"/><path class="desk4" d="M19.5,12H25L22.61,4.58,18.16,7.85A7.09,7.09,0,0,1,19.5,12Z" style="fill:#e6e6e5"/></svg>'
+    // var desk2SVG = '<svg width="19.97" height="21"><path class="desk2" d="M9.13,16.38,7.63,21,2.11,17,6,14.13A6.25,6.25,0,0,0,9.13,16.38Z" style="fill:#e6e6e5"/><path class="desk2" d="M4.86,10.5A6.15,6.15,0,0,0,6,14.13L2.11,17,0,10.5Z" style="fill:#e6e6e5"/><path class="desk2" d="M4.86,10.5H0L2.11,4,6,6.87A6.15,6.15,0,0,0,4.86,10.5Z" style="fill:#e6e6e5"/><path class="desk2" d="M6,6.87,2.11,4,7.63,0l1.5,4.62A6.25,6.25,0,0,0,6,6.87Z" style="fill:#e6e6e5"/><path class="desk2" d="M11,4.32a6.31,6.31,0,0,0-1.91.3L7.63,0h6.82L13,4.62A6.31,6.31,0,0,0,11,4.32Z" style="fill:#e6e6e5"/><path class="desk2" d="M13,4.62,14.45,0,20,4,16,6.87A6.25,6.25,0,0,0,13,4.62Z" style="fill:#e6e6e5"/></svg>'
+    // var desk3SVG = '<svg width="19.97" height="21"><path class="desk3" d="M10.84,16.38,12.34,21l5.52-4-3.93-2.86A6.21,6.21,0,0,1,10.84,16.38Z" style="fill:#e6e6e5"/><path class="desk3" d="M15.11,10.5a6.15,6.15,0,0,1-1.18,3.63L17.86,17,20,10.5Z" style="fill:#e6e6e5"/><path class="desk3" d="M15.11,10.5H20L17.86,4,13.93,6.87A6.15,6.15,0,0,1,15.11,10.5Z" style="fill:#e6e6e5"/><path class="desk3" d="M13.93,6.87,17.86,4,12.34,0l-1.5,4.62A6.21,6.21,0,0,1,13.93,6.87Z" style="fill:#e6e6e5"/><path class="desk3" d="M8.93,4.32a6.31,6.31,0,0,1,1.91.3L12.34,0H5.52L7,4.62A6.31,6.31,0,0,1,8.93,4.32Z" style="fill:#e6e6e5"/><path class="desk3" d="M7,4.62,5.52,0,0,4,3.94,6.87A6.18,6.18,0,0,1,7,4.62Z" style="fill:#e6e6e5"/></svg>'
+    // var desk4SVG = '<svg width="25" height="12"><path class="desk4" d="M6.84,7.85,2.39,4.58,0,12H5.5A7.09,7.09,0,0,1,6.84,7.85Z" style="fill:#e6e6e5"/><path class="desk4" d="M10.34,5.28,8.64,0,2.39,4.58,6.84,7.85A7.06,7.06,0,0,1,10.34,5.28Z" style="fill:#e6e6e5"/><path class="desk4" d="M12.5,4.93a7,7,0,0,1,2.16.35L16.36,0H8.64l1.7,5.28A7,7,0,0,1,12.5,4.93Z" style="fill:#e6e6e5"/><path class="desk4" d="M18.16,7.85l4.45-3.27L16.36,0l-1.7,5.28A7.06,7.06,0,0,1,18.16,7.85Z" style="fill:#e6e6e5"/><path class="desk4" d="M19.5,12H25L22.61,4.58,18.16,7.85A7.09,7.09,0,0,1,19.5,12Z" style="fill:#e6e6e5"/></svg>'
 
+    var desk2SVG = '<svg width="25" height="23.1239"><path class="desk2" d="M7.9828,18.6516,4.4315,23.1239,0,16.4407l5.5069-1.5321A7.2717,7.2717,0,0,0,7.9828,18.6516Z" style="fill:#e6e6e5"/><path class="desk2" d="M5.6921,10.4241a7.2234,7.2234,0,0,0-.1852,4.4845L0,16.4407.343,8.4292Z" style="fill:#e6e6e5"/><path class="desk2" d="M5.6921,10.4241.343,8.4292,5.33,2.1494l3.159,4.764A7.2231,7.2231,0,0,0,5.6921,10.4241Z" style="fill:#e6e6e5"/><path class="desk2" d="M8.4887,6.9134,5.33,2.1494,13.0551,0l-.2443,5.7056A7.2722,7.2722,0,0,0,8.4887,6.9134Z" style="fill:#e6e6e5"/><path class="desk2" d="M15.0388,6.1551a7.2481,7.2481,0,0,0-2.228-.45L13.0551,0l7.5134,2.802L17.0172,7.2743A7.2523,7.2523,0,0,0,15.0388,6.1551Z" style="fill:#e6e6e5"/><path class="desk2" d="M17.0172,7.2743,20.5685,2.802,25,9.4851l-5.507,1.5322A7.2723,7.2723,0,0,0,17.0172,7.2743Z" style="fill:#e6e6e5"/></svg>';
+    var desk3SVG = '<svg width="25" height="23.1239"><path class="desk3" d="M7.9828,7.2743,4.4315,2.802,0,9.4851l5.507,1.5322A7.2723,7.2723,0,0,1,7.9828,7.2743Z" style="fill:#e6e6e5"/><path class="desk3" d="M9.9612,6.1551a7.2481,7.2481,0,0,1,2.228-.45L11.9449,0,4.4315,2.802,7.9828,7.2743A7.2523,7.2523,0,0,1,9.9612,6.1551Z" style="fill:#e6e6e5"/><path class="desk3" d="M16.5113,6.9134l3.159-4.764L11.9449,0l.2443,5.7056A7.2722,7.2722,0,0,1,16.5113,6.9134Z" style="fill:#e6e6e5"/><path class="desk3" d="M19.3079,10.4241,24.657,8.4292,19.67,2.1494l-3.159,4.764A7.2231,7.2231,0,0,1,19.3079,10.4241Z" style="fill:#e6e6e5"/><path class="desk3" d="M19.3079,10.4241a7.2234,7.2234,0,0,1,.1852,4.4845L25,16.4407l-.343-8.0115Z" style="fill:#e6e6e5"/><path class="desk3" d="M17.0172,18.6516l3.5513,4.4723L25,16.4407l-5.5069-1.5321A7.2717,7.2717,0,0,1,17.0172,18.6516Z" style="fill:#e6e6e5"/></svg>';
+    var desk4SVG = '<svg width="28" height="13.3148"><path class="desk4" d="M7.6636,8.7112l-4.99-3.6254L0,13.3148H6.16A7.7947,7.7947,0,0,1,7.6636,8.7112Z" style="fill:#e6e6e5"/><path class="desk4" d="M11.5779,5.8605,9.6737,0l-7,5.0858,4.99,3.6254A7.8466,7.8466,0,0,1,11.5779,5.8605Z" style="fill:#e6e6e5"/><path class="desk4" d="M14,5.4748a7.8269,7.8269,0,0,1,2.422.3856L18.3262,0H9.6737l1.9042,5.8605A7.8247,7.8247,0,0,1,14,5.4748Z" style="fill:#e6e6e5"/><path class="desk4" d="M20.3363,8.7112l4.99-3.6254L18.3262,0,16.422,5.86A7.8468,7.8468,0,0,1,20.3363,8.7112Z" style="fill:#e6e6e5"/><path class="desk4" d="M21.84,13.3148H28l-2.6738-8.229-4.99,3.6254A7.7939,7.7939,0,0,1,21.84,13.3148Z" style="fill:#e6e6e5"/></svg>'
+    
     function shifterList(listNum, color) {
 
         var shiftNum = listNum;
@@ -1150,9 +1156,9 @@
 
                 scheduleList = JSON.parse(this.responseText);
                 makeSchedule();
-                
+
                 var schedule = document.getElementsByClassName('scheduleButton');
-                if ( schedule.length ) {
+                if (schedule.length) {
                     schedule[0].click();
                 }
             }
