--- a/raon-control/archive.html
+++ b/raon-control/archive.html
@@ -5,34 +5,35 @@
 <link rel="stylesheet" type="text/css" href="archive.css">
 
 <body>
-	<div style="margin:auto; position: relative; width:1920px; height:80px;">
-		<div id="time-stamp"></div>
-		<svg id="under-line" width="1920" height="42">
-			<polyline class="under-line-style" points="0 40 760 40 791 0" />
-			<polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
-		</svg>
-		<svg id="center-top" width="400" height="80">
-			<path
-				d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
-				style="fill:#f3f3f3" />
-		</svg>
-		<div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
-		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
-		<div id="left-menu">
-			<a href="" class="secret-menu">Logbook</a>
-			<a href="" class="secret-menu">Finder</a>
-			<a href="" class="secret-menu">Naming</a>
-			<a href="bab.html">Bab</a>
-			<a href="asset.html">Asset</a>
-		</div>
-		<div id="right-menu">
-			<a href="monitoring.html">Monitoring</a>
-			<a href="schedule.html">Schedule</a>
-			<a href="archive.html">Archive</a>
-			<a href="downloads.html">Download</a>
-			<a href="documents.html">Document</a>
-		</div>
-	</div>
+    <div style="margin:auto; position: relative; width:1920px; height:80px;">
+        <div id="time-stamp"></div>
+        <svg id="under-line" width="1920" height="42">
+            <polyline class="under-line-style" points="0 40 760 40 791 0" />
+            <polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
+        </svg>
+        <svg id="center-top" width="400" height="80">
+            <path
+                d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
+                style="fill:#f3f3f3" />
+        </svg>
+        <div id="raon-box"><a href="main.html"><img width="133.7666" height="33.8293" src="images/raon-white.svg"></a>
+        </div>
+        <div id="accelerator-control"><a href="member.html">C</a><a href="bab.html">S</a></div>
+        <div id="left-menu">
+            <a href="" class="secret-menu">Logbook</a>
+            <a href="" class="secret-menu">Finder</a>
+            <a href="" class="secret-menu">Naming</a>
+            <a href="download.html">Download</a>
+            <a href="document.html">Document</a>
+        </div>
+        <div id="right-menu">
+            <a href="monitoring.html">Monitoring</a>
+            <a href="schedule.html">Dobby</a>
+            <a href="archive.html">Archive</a>
+            <a href="timeleap.html">PlanB</a>
+            <a href="asset.html">Asset</a>
+        </div>
+    </div>
 
 	<div style="height:100px"></div>
 
